Name:           jobqueue
Version:        0.0.4
Description:    A job queue library using Zookeeper
License:        TBD
License-file:   LICENSE
Author:         Kiyoshi Ikehara
Maintainer:     kiyoshi.ikehara at gree.net
Copyright:      GREE, Inc.
Build-Type:     Simple
Category:       Network, Client
Cabal-Version:  >=1.8
Description:
  Haskell JobQueue is a library used for building a job scheduler with priority queues.
  The state of jobs is stored in a backend database such as Apache Zookeeper or other 
  highly reliable mesage queue systems.
  
Library
  Ghc-Options:     -O2 -Wall
  Build-Depends:   base                     >= 4 && < 5
                 , mtl
                 , network                  >= 2.3.2
                 , hslogger
                 , resourcet                >= 0.4 && < 0.5
                 , text
                 , bytestring
                 , unix
                 , containers
                 , split
                 , stm                      >= 2.4
                 , time
                 , data-default
                 , zookeeper
                 , attoparsec
                 , data-default
  Hs-source-dirs:  src
  Exposed-modules: Network.JobQueue
                 , Network.JobQueue.Class
                 , Network.JobQueue.Types
                 , Network.JobQueue.Action
                 , Network.JobQueue.Job
                 , Network.JobQueue.JobQueue
                 , Network.JobQueue.JobResult
                 , Network.JobQueue.Backend
                 , Network.JobQueue.Backend.Class
                 , Network.JobQueue.Backend.Types
                 , Network.JobQueue.Backend.Zookeeper
  Other-modules:   Network.JobQueue.Backend.Zookeeper.ZookeeperQueue
  Extensions:      DeriveDataTypeable

Executable jobqueue-sample-hello
  Ghc-Options:     -threaded -O2 -Wall -rtsopts
  Build-Depends:   base >=4 && <5
                 , jobqueue
                 , bytestring
                 , containers
                 , data-default
  Hs-source-dirs:  sample
  Main-is:         hello.hs
  Extensions:      DeriveDataTypeable

Executable jobqueue-sample-fibonacci
  Ghc-Options:     -threaded -O2 -Wall -rtsopts
  Build-Depends:   base >=4 && <5
                 , jobqueue
                 , network
                 , bytestring
                 , containers
                 , transformers
                 , data-default
  Hs-source-dirs:  sample
  Main-is:         fibonacci.hs
  Extensions:      DeriveDataTypeable
