Name:           jobqueue
Version:        0.0.17
Synopsis:       A job queue library
License:        OtherLicense
License-File:   LICENSE
Author:         Kiyoshi Ikehara
Maintainer:     kiyoshi.ikehara at gree.net
Copyright:      GREE, Inc.
Build-Type:     Simple
Category:       Network, Client
Cabal-Version:  >=1.8
Description:
  Haskell JobQueue is a library used for building a job scheduler with priority queues.
  The state of jobs is stored in a backend database such as Apache Zookeeper or other 
  highly reliable message queue systems.

Source-Repository head
  type:     git
  location: https://github.com/gree/haskell-jobqueue.git

Flag sample
  Description: Build sample programs
  Default: False

Library
  Ghc-Options:     -Wall
  Build-Depends:   base                     >= 4 && < 5
                 , mtl
                 , network                  >= 2.3.2
                 , hslogger
                 , text
                 , bytestring
                 , containers
                 , split
                 , time
                 , data-default
                 , stm                      >= 2.4
                 , hzk                      >= 2.0.0
                 , attoparsec
                 , data-default
                 , HDBC
                 , HDBC-sqlite3
                 , fast-logger
                 , monad-logger
  Hs-source-dirs:  src
  Exposed-modules: Network.JobQueue
                 , Network.JobQueue.Class
                 , Network.JobQueue.Types
                 , Network.JobQueue.Action
                 , Network.JobQueue.Aux
                 , Network.JobQueue.Job
                 , Network.JobQueue.Job.Internal
                 , Network.JobQueue.JobQueue
                 , Network.JobQueue.JobQueue.Internal
                 , Network.JobQueue.JobResult
                 , Network.JobQueue.Backend
                 , Network.JobQueue.Backend.Class
                 , Network.JobQueue.Backend.Types
                 , Network.JobQueue.Backend.Zookeeper
                 , Network.JobQueue.Backend.Sqlite3
                 , Network.JobQueue.Settings
  Other-modules:   Network.JobQueue.Backend.Zookeeper.ZookeeperQueue
  Extensions:      DeriveDataTypeable

Executable jobqueue-sample-hello
  Ghc-Options:     -threaded -Wall -rtsopts
  Build-Depends:   base >=4 && <5
                 , jobqueue
                 , bytestring
                 , containers
                 , data-default
                 , monad-logger
  Hs-source-dirs:  sample
  Main-is:         hello.hs
  Extensions:      DeriveDataTypeable
  if flag(sample)
    Buildable: True
  else
    Buildable: False

Executable jobqueue-sample-fibonacci
  Ghc-Options:     -threaded -Wall -rtsopts
  Build-Depends:   base >=4 && <5
                 , jobqueue
                 , network
                 , bytestring
                 , containers
                 , transformers
                 , data-default
  Hs-source-dirs:  sample
  Main-is:         fibonacci.hs
  Extensions:      DeriveDataTypeable
  if flag(sample)
    Buildable: True
  else
    Buildable: False

Executable jobqueue-sample-priority
  Ghc-Options:     -threaded -Wall -rtsopts
  Build-Depends:   base >=4 && <5
                 , jobqueue
                 , network
                 , bytestring
                 , containers
                 , transformers
                 , data-default
  Hs-source-dirs:  sample
  Main-is:         priority.hs
  Extensions:      DeriveDataTypeable
  if flag(sample)
    Buildable: True
  else
    Buildable: False

Executable jobqueue-sample-suspend
  Ghc-Options:     -threaded -Wall -rtsopts
  Build-Depends:   base >=4 && <5
                 , jobqueue
                 , bytestring
                 , containers
                 , data-default
  Hs-source-dirs:  sample
  Main-is:         suspend.hs
  Extensions:      DeriveDataTypeable
  if flag(sample)
    Buildable: True
  else
    Buildable: False

Test-Suite test
  Ghc-Options:     -threaded -O2
  Build-depends:   base
                 , bytestring
                 , network >= 2.3.2
                 , directory
                 , QuickCheck == 2.5.1.1
                 , hspec
                 , async
                 , jobqueue
                 , data-default
  Type:            exitcode-stdio-1.0
  Hs-source-dirs:  test
  Main-is:         Main.hs

