Name:           jobqueue
Version:        0.1.3
Synopsis:       A job queue library
License:        MIT
License-File:   LICENSE
Author:         Kiyoshi Ikehara
Maintainer:     kiyoshi.ikehara at gree.net
Copyright:      GREE, Inc.
Build-Type:     Simple
Category:       Network, Client
Cabal-Version:  >=1.8
Description:
  Haskell JobQueue is a library used for building a job scheduler with priority queues.
  The state of jobs is stored in a backend database such as Apache Zookeeper or other 
  highly reliable message queue systems.

Source-Repository head
  type:     git
  location: https://github.com/gree/haskell-jobqueue.git

Library
  Ghc-Options:     -Wall
  Build-Depends:   base                     >= 4 && < 5
                 , mtl                      > 2.2
                 , network                  >= 2.3.2
                 , hslogger
                 , text
                 , bytestring
                 , containers
                 , split
                 , time
                 , data-default
                 , stm                      >= 2.4
                 , hzk                      >= 2.0.0
                 , attoparsec
                 , data-default
                 , HDBC
                 , HDBC-sqlite3
                 , fast-logger
                 , monad-logger
                 , template-haskell
                 , text-format
                 , monad-control
                 , transformers-base
                 , lifted-base
  Hs-source-dirs:  src
  Exposed-modules: Network.JobQueue
                 , Network.JobQueue.Class
                 , Network.JobQueue.Types
                 , Network.JobQueue.Action
                 , Network.JobQueue.AuxClass
                 , Network.JobQueue.Job
                 , Network.JobQueue.Job.Internal
                 , Network.JobQueue.JobQueue
                 , Network.JobQueue.JobQueue.Internal
                 , Network.JobQueue.Backend
                 , Network.JobQueue.Backend.Class
                 , Network.JobQueue.Backend.Types
                 , Network.JobQueue.Backend.Zookeeper
                 , Network.JobQueue.Backend.Sqlite3
                 , Network.JobQueue.Logger
  Other-modules:   Network.JobQueue.Backend.Zookeeper.ZookeeperQueue
  Extensions:      DeriveDataTypeable

Test-Suite test
  Ghc-Options:     -threaded -O2
  Build-depends:   base
                 , bytestring
                 , network >= 2.3.2
                 , directory
                 , QuickCheck == 2.5.1.1
                 , hspec
                 , async
                 , jobqueue
                 , data-default
                 , stm
  Type:            exitcode-stdio-1.0
  Hs-source-dirs:  test
  Main-is:         Main.hs

